# neuralTest

./: API_KEY_SETUP.md  FIX_GEMINI.md  FIX_OPENAI_QUOTA.md  GEMINI_SETUP.md  HOW_TO_RUN.md  QUICK_START.md  QUICK_START_GEMINI.md  README.md  SETUP_API_KEY.md  STATUS.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  context.rs  db.rs  lib.rs  main.rs  models.rs  redaction.rs  runner.rs  workflow.rs
src/components/AIPanel/: AIPanel.css  AIPanel.jsx
src/components/LearningModePanel/: LearningModePanel.css  LearningModePanel.jsx
src/components/Terminal/: CommandBlock.css  CommandBlock.jsx  Terminal.css  Terminal.jsx
src/components/WorkflowRunner/: WorkflowRunner.css  WorkflowRunner.jsx
src/services/: tauriClient.js
