[package]
name = "project-neural"
version = "0.1.0"
description = "Project Neural - AI-Powered Terminal"
authors = ["you"]
edition = "2021"

[lib]
name = "project_neural_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dotenv = "0.15"
